# embedded

./: .gitignore  BOM.txt  CMakeLists.txt  GAINS.txt  README.txt  add_remotes.sh
IMU_TIVA_UART_TEST_2/: .cproject  .project  imu_uart.c  imu_uart.h  main.c
IMU_TIVA_UART_TEST_2/.launches/: IMU_TIVA_UART_TEST_2.launch
IMU_TIVA_UART_TEST_3/: imu_hw.hpp  main.cpp
ccs_projects/: i.txt
ccs_projects/GimbalLibrary/: .cproject  .project  main.c
ccs_projects/IMU_TIVA_UART_TEST_2/: imu_uart.h
ccs_projects/commstester/: .cproject  protobuf.c  ringbuf.c  ringbuf.h  tm4c123gh6pm_startup_ccs.c
ccs_projects/idk/: dof.c  quad_ctrl.h
ccs_projects/lidar_test/: .ccsproject  .cproject  .project
ccs_projects/maav/: .ccsproject  .cproject  .project  main.c  main.cpp  message_types.lcm  protobuf.proto  qc_test.c  tm4c123gh6pm_startup_ccs.c
ccs_projects/maav_dji/: .cproject  .project  main.c  tm4c123gh6pm_startup_ccs.c
ccs_projects/protobuf demo/: .cproject  README.txt  main.c  testmessage.proto
ccs_projects/protobuf_demo/: .project  ringbuf.c  testmessage.c
cmake/: FindEigen3.cmake  FindLCM.cmake
cmeigen/: CMakeLists.txt  README  cmeigen.hpp
doc/: CMakeLists.txt  DOCS_README  Doxyfile  Doxyfile.in
doc/checklist/: checklist.tex
doc/latex/: kalman.tex
docs/: DOCS_README  MaavProjectLinkedResourceChanges.tex  Makefile  ccs_build.tex  kalman.tex
docs/meetings/: notes_11-24.tex
heartbeat/: .cproject  .project  lidar_test.c  main.c
heartbeat/.launches/: heartbeat.launch
heartbeat2/: .cproject  .project  lidar_test.c
heartbeat2/.launches/: heartbeat2.launch
hwtests/: CMakeLists.txt  README.txt  links.txt
hwtests/project/: .cproject  .projectold  TestFunction.hpp  __.project.footer  __.project.linkresvarlistsep  __.project.midcontent  main.cpp
hwtests/tests/: CMakeLists.txt
hwtests/tests/imu/: CMakeLists.txt  test.cpp
hwtests/tests/kill/: CMakeLists.txt  test.cpp
hwtests/tests/lcm/: CMakeLists.txt  CoverageManifest.txt  test.cpp
hwtests/tests/led/: CMakeLists.txt  CoverageManifest.txt  test.cpp
hwtests/tests/lidar/: CMakeLists.txt  test.cpp
hwtests/tests/pilot/: CMakeLists.txt  test.cpp
hwtests/tests/ringbuffer/: CMakeLists.txt  CoverageManifest.txt  test.c
hwtests/tests/uart/: CMakeLists.txt  test.cpp
include/: Apeshit.hpp  Battery.hpp  BatteryHw.hpp  CtrlLogs.hpp  DataLinkHw.hpp  Dji.hpp  Dof.hpp  EEPROM.h  FlightMode.hpp  I2CDefines.hpp  I2CHw.hpp  I2C_hw.hpp  Imu.hpp  ImuHw.hpp  Imu_Defines.hpp  Imu_hw.hpp  LED.h  Lidar.hpp  LidarDefines.hpp  Lidar_Defines.hpp  Loop.hpp  LowPass.hpp  PPM.h  Pid.hpp  ProgramState.hpp  Px4.hpp  Px4Defines.hpp  Px4_Defines.hpp  SdCard.hpp  SdCardHw.hpp  Vehicle.hpp  rc.hpp  time_util.h  utility.h
include/kalman/: ExtendedKalmanFilter.hpp  KalmanFunctions.hpp
include/messaging/: DataLink.hpp  Decoder.hpp  MessageHandler.hpp  RingBuffer.hpp  emergency_t.h  feedback_t.h  gains_t.h  raw_pose_t.h  setpt_t.h
lcmtypes/: README  ctrl_log.lcm  emergency.lcm  feedback.lcm  gains.lcm  setpt.lcm
lidar_test/: main.c
lm4tools/: CMakeLists.txt
lm4tools/lm4flash/: CMakeLists.txt
lm4tools/lmicdiusb/: CMakeLists.txt
logkalman/: CMakeLists.txt  LogKalman_OutputViewer.m  logkalman.cpp
maav/: .cproject  .cproject.bak  .project  .project.bak  .project.linux.bak  main.cpp  tm4c123gh6pm_startup_ccs.c
maav/Debug/: main.pp  (+9 more)
research/: CMEIGEN_v2.7z  LogKalman_OutputViewer.m  spKalmanExt.m
sdlib/: diskio.c  mmc-dk-tm4c123g.c
side_projects/sasawatlcm/: CMakeLists.txt
side_projects/sasawatlcm/include/messaging/: ChannelNames.hpp  MessageHandler.hpp  RingBuffer.hpp  TransmitHandler.hpp  feedback_t.h  lcmlite.h
side_projects/sasawatlcm/src/: CMakeLists.txt
side_projects/sasawatlcm/src/messaging/: ChannelNames.cpp  DataLink.cpp  Decoder.cpp  TransmitHandler.cpp  emergency_t.c  setpt_t.c
side_projects/sasawatlcm/test/: CMakeLists.txt  DataLinkTest.cpp  RingBufTest.cpp
src/: Apeshit.cpp  Apeshit.hpp  Battery.cpp  Battery.hpp  BatteryHw.cpp  CMakeLists.txt  Ctrl.hpp  CtrlLogs.hpp  DataLinkHw.cpp  DataLinkHw.hpp  Dof.cpp  Dof.hpp  EEPROM.c  FlightMode.cpp  FlightMode.hpp  FlightModeHw.cpp  FlightModeHw.hpp  I2CHw.cpp  I2CHw.hpp  I2C_hw.cpp  Imu.cpp  Imu.hpp  ImuDefines.cpp  ImuDefines.hpp  ImuHw.cpp  ImuHw.hpp  Imu_hw.cpp  LED.c  LED.h  Lidar.cpp  Lidar.h  Lidar.hpp  LidarDefines.hpp  Loop.cpp  Loop.hpp  LowPass.cpp  MaavMath.cpp  MaavMath.hpp  MovingAvg.cpp  MovingAvg.hpp  (+32 more)
src/kalman/: ExtendedKalmanFilter.cpp  KalmanFilter.cpp  KalmanFilter.hpp  KalmanFunctions.cpp
src/messaging/: DataLink.cpp  DataLink.hpp  DataLinkDefines.cpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  MessageHandler.cpp  MessageHandler.hpp  data_link.c  dji_t.c  dji_t.h  dof_feedback_t.c  emergency_t.c  emergency_t.h  feedback_t.c  feedback_t.h  gains_t.c  gains_t.h  imu_t.c  imu_t.h  lcmlite.c  lidar_t.c  lidar_t.h  raw_pose_t.c  ringbuf.c  setpt_t.c  tuning_t.c
src/messaging/lcm/: lcm_coretypes.h
src/runnables/: BatteryRunnable.cpp  BatteryRunnable.hpp  ControllerRunnable.cpp  CtrlRunnable.cpp  CtrlRunnable.hpp  DataLinkRunnable.cpp  DataLinkRunnable.hpp  DataLinkRunnables.cpp  DjiRunnable.cpp  DjiRunnable.hpp  FlightModeRunnable.cpp  I2CRunnable.cpp  ImuRunnable.cpp  ImuRunnable.hpp  KillRunnable.cpp  KillRunnable.hpp  Px4Runnable.hpp  Runnable.hpp  SwitchRunnable.cpp  SwitchRunnable.hpp
src/sdlib/: ff.h
test/: BatteryTest.cpp  DofTest.cpp  LidarSwTest.cpp  LowPassTest.cpp  Makefile  Px4SwTest.cpp  README.txt  Vechile_instr  VehicleSwTest.cpp  dofTest.cpp  pidTest.cpp  sampleTest.cpp
tests/: BatteryTest.cpp  CMakeLists.txt  KalmanTest.cpp  KalmanUnitTest.cpp  LidarCorrect.txt  LidarSwTest.cpp  LowPassTest.cpp  MovingAvgTest.cpp  Px4Correct.txt  Px4SwTest.cpp  README.txt  RcControllerTest.cpp  VehicleRunFilterTest.cpp  VehicleSwTest.cpp  cmeigen_test.cpp  dofTest.cpp  makefile_old.txt  pidTest.cpp  runFltAns.txt  sampleTest.cpp
tuning_program/: Makefile  dof_feedback_t.c  lcmlite.h  main.cpp  position_t.c  position_t.h  serial.cpp  serial.h  seriallcm.cpp  seriallcm.h  str_log_t.c  str_log_t.h  target_t.c  tuning_t.h
(+1203 files in other folders)
